--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,7 @@
-<p>This is the partial for view 1.</p>
+<div class="input-group">
+    <input placeholder="你想要看什么？" type="text" class="form-control x-kw" name="ykurl">
+        <span class="input-group-btn">
+            <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span>视频搜索</button>
+        </span>
+</div>
+
