--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="js/modernizr.custom.53451.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.gallery.js"></script>
+    <script src="js/jRating.js"></script>
 
 
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
@@ -37,7 +38,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">电影推荐</a></li>
+                    <li class="active"><a href="/">视频推荐</a></li>
                     <li><a href="http://www.id97.com/videos/movie">热门电影</a></li>
                     <li>
                 </ul>
