--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -100,11 +100,11 @@
 
 <div></div>
 
-<!--<div style="margin-top: 20px">-->
-    <!--<embed src="http://player.youku.com/player.php/sid/XODY0MDk2MTU2/v.swf"-->
-           <!--allowFullScreen="true" quality="high" width="960" height="600"-->
-           <!--align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>-->
-<!--</div>-->
+<div style="margin-top: 20px">
+    <embed src="http://player.youku.com/player.php/sid/XODY0MDk2MTU2/v.swf"
+           allowFullScreen="true" quality="high" width="960" height="600"
+           align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+</div>
 
 
 </div>
