--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
    <link rel="shortcut icon" href="../favicon.ico">
 
   <script type="text/javascript" src="js/modernizr.custom.53451.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.gallery.js"></script>
     <script src="js/jRating.js"></script>
 
@@ -73,6 +73,7 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="view3/view3.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
