--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 
 
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+
+
 </head>
 <body>
 
@@ -58,7 +60,7 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-    <div class="container" style="width:1000px;">
+    <div class="container" style="width:1000px">
 
     <div ng-view></div>
     </div>
@@ -68,14 +70,29 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+  <script src="bower_components/d3/d3.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="view3/view3.js"></script>
+    <script src="view4/view4.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+
+    <style>
+        .ac-tooltip {
+            color: black;
+            border: 2px solid rgba(200,200,0,0.8);
+            background-color: rgba(200,200,0,0.5);
+        }
+        #chart1 .ac-legend-box {
+            border-radius: 10px;
+        }
+    </style>
 </body>
 </html>
